<resources>
    <string name="app_name">AmloShoppingApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="place_order">Place Order</string>
    <string name="load_data">Load Data</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="my_account">Profile</string>
    <string name="home_page_string">Home</string>
    <string name="my_cart">Cart</string>
    <string name="my_orders">Orders</string>
    <string name="change_password">Change Password</string>
    <string name="about_page">About</string>
    <string name="help_page">Help</string>
    <string name="seller">Seller</string>
    <string name="logout_page">Logout</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop_with_you">We love to shop with you</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="prod_details">Product Details</string>
    <string name="amlooo">Amlooo</string>
    <string name="we_love_to_shop_with_you">We love to shop with you</string>


    <string name="clothing_fashion_accessories"><![CDATA[Clothing, Fashion, Personal Care & Accessories]]></string>
    <string name="furniture_home_supplies"><![CDATA[Furniture, Home Improvement & Supplies]]></string>
    <string name="electronics">Electronics</string>
    <string name="baby_care">Baby Care</string>
    <string name="automotive">Automotive</string>
    <string name="toys_school_supplies"><![CDATA[Toys, Stationery & School supplies]]></string>

</resources>
