<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item android:id="@+id/home_page"
            android:icon="@drawable/home_icon"
            android:title="@string/home_page_string"/>
        <item android:id="@+id/about"
            android:icon="@drawable/about_icon"
            android:title="@string/about_page"/>
        <item android:id="@+id/account_details"
            android:icon="@drawable/ic_my_account"
            android:title="@string/my_account"/>
        <item android:id="@+id/change_password"
            android:icon="@drawable/reset_password"
            android:title="@string/change_password"/>
        <item android:id="@+id/cart"
            android:icon="@drawable/cart_icon"
            android:title="@string/my_cart"/>
        <item android:id="@+id/orders"
          android:icon="@drawable/order"
          android:title="@string/my_orders"/>
        <item android:id="@+id/help"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/help_page"/>
        <item android:id="@+id/seller"
            android:icon="@drawable/seller"
            android:title="@string/seller"/>
        <item android:id="@+id/logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/logout_page"/>
    </group>
</menu>
