<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.amlo.shopping.activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bk"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/login_img"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_img"
                android:drawableStart="@drawable/ic_account_circle_black_24dp"
                android:ems="15"
                android:fontFamily="@font/adamina"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FDF9F9"
                android:textColorHint="#FDF9F9"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_img"
                    android:drawableStart="@drawable/ic_lock_open_black_24dp"
                    android:ems="15"
                    android:fontFamily="@font/adamina"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#FDF9F9"
                    android:textColorHint="#FDF9F9"/>

                <ImageView
                    android:id="@+id/visibility"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:onClick="passwordVisibility"
                    android:src="@drawable/ic_visibility_off_black_24dp" />

            </RelativeLayout>

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_design"
                android:ems="15"
                android:fontFamily="@font/adamina"
                android:textColor="@android:color/white"
                android:text="@string/sign_in"
                android:textAlignment="center"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
